Popover redesigned to support sticky header + customizable height and width + scrollbar position fix

--- a/packages/components/src/popover/style.scss
+++ b/packages/components/src/popover/style.scss
@@ -1,33 +1,39 @@
-.publisher-component-popover{
+.publisher-component-popover {
 	position: relative;
-
+	--popover-min-height: 260px;
+	--popover-height: auto;
+	--popover-width: 290px;
+	--popover-header-height: 42px;
+	
 	.components-popover__content {
-		padding: 18px;
+		padding: 0;
 		border: 2px solid var(--wp-admin-theme-color, #007cba);
 		box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.25);
-		min-width: 290px;
-		min-height: 260px;
+		min-width: var(--popover-width);
+		width: var(--popover-width);
 		border-radius: 3px;
 		position: relative;
+		min-height: auto;
+		height: auto;
 	}
-
-	&.with-header{
-
+	
+	&.with-header {
+		
 		.components-popover__content {
-			padding-top: 60px;
+			padding-top: 42px;
 		}
 	}
-
-	.publisher-component-header{
+	
+	.publisher-component-popover-header {
 		padding: 0 15px;
 		box-shadow: 0 3px 8px rgba(0, 0, 0, 0.1882352941);
-		position: absolute;
-		top: 0;
-		left: 0;
-		right: 0;
-		background: #fff;
+		position: fixed;
+		top: 2px;
+		left: 2px;
+		right: 2px;
+		background: #ffffff;
 		margin: 0;
-		height: 42px;
+		height: var(--popover-header-height);
 		display: flex;
 		gap: 10px;
 		align-items: center;
@@ -36,11 +42,18 @@
 		font-size: 13px;
 		z-index: 6;
 		border-radius: 2px 2px 0 0;
-
-		.publisher-component-header-close{
+		
+		.publisher-component-popover-close {
 			margin-left: auto;
 			padding: 0;
 			width: 22px;
 		}
+	}
+	
+	.publisher-component-popover-body{
+		padding: 18px 18px 18px;
+		min-height: calc( var(--popover-min-height) - var(--popover-header-height) );
+		max-height: calc( var(--popover-height) - var(--popover-header-height) );
+		overflow: auto;
 	}
 }
